# oak

./: .gitignore  CMakeLists.txt  README.md  TODO-zh.md  TODO.md  ofxTestLog.txt  vcpkg.json
app/: CMakeLists.txt  core.cpp  core.h  main.cpp
app/audio/: CMakeLists.txt  audiolevelmeter.cpp  audiolevelmeter.h  audiosynchronizer.cpp  audiosynchronizer.h  audiowaveformsync.cpp  audiowaveformsync.h
app/cli/cliprogress/: cliprogressdialog.h
app/codec/: CMakeLists.txt  decoder.cpp  decoder.h  proxymanager.cpp  proxymanager.h  timecodemetadata.cpp  timecodemetadata.h
app/codec/ffmpeg/: ffmpegdecoder.cpp  ffmpegdecoder.h  ffmpegencoder.cpp
app/codec/oiio/: oiiodecoder.cpp  oiiodecoder.h
app/common/: CMakeLists.txt  ffmpegutils.cpp
app/config/: config.cpp
app/dialog/actionsearch/: actionsearch.h
app/dialog/autorecovery/: autorecoverydialog.cpp  autorecoverydialog.h
app/dialog/diskcache/: diskcachedialog.cpp
app/dialog/export/: export.cpp  exportaudiotab.h  exportsubtitlestab.h  exportvideotab.h
app/dialog/footagerelink/: footagerelinkdialog.cpp
app/dialog/keyframeproperties/: keyframeproperties.cpp
app/dialog/markerproperties/: markerpropertiesdialog.cpp
app/dialog/otioproperties/: otiopropertiesdialog.h
app/dialog/preferences/: keysequenceeditor.h
app/dialog/progress/: progress.h
app/dialog/projectproperties/: projectproperties.cpp
app/dialog/sequence/: sequence.cpp  sequencedialogparametertab.cpp  sequencedialogpresettab.cpp  sequencepreset.h
app/dialog/speedduration/: speeddurationdialog.cpp
app/dialog/text/: text.h
app/node/: factory.cpp  factory.h  node.cpp  node.h  traverser.cpp
app/node/plugins/: Plugin.cpp  Plugin.h
app/packaging/linux/: org.oakvideoeditor.Oak.appdata.xml.in
app/packaging/macos/: olive.icns
app/panel/: panel.h
app/panel/pixelsampler/: pixelsamplerpanel.cpp
app/panel/scope/: scope.cpp  scope.h
app/panel/tool/: tool.cpp
app/pluginSupport/: OliveClip.cpp  OliveClip.h  OlivePluginInstance.cpp  OlivePluginInstance.h  image.h  paraminstance.cpp  paraminstance.h
app/render/: CMakeLists.txt  colorprocessor.cpp  framehashcache.cpp  framehashcache.h  framememorycache.cpp  framememorycache.h  playbackcache.h  previewaudiodevice.cpp  renderer.cpp  rendermanager.cpp  rendermanager.h  renderprocessor.cpp  renderworkerpool.cpp  renderworkerpool.h
app/render/cache/: CMakeLists.txt  framecache.cpp  framecache.h  framediskcache.cpp  framediskcache.h  framehashcache.cpp  framehashcache.h  framememcache.cpp  framememcache.h
app/render/ipc/: CMakeLists.txt  frameslotpool.cpp  frameslotpool.h  ipcmessage.cpp  ipcmessage.h  sharedmemoryregion.cpp  sharedmemoryregion.h  spscringbuffer.h
app/render/job/: footagejob.h
app/render/plugin/: pluginrenderer.cpp
app/render/worker/: workermain.cpp
app/shaders/: rgbvectorscope.frag  rgbvectorscope.vert  threewaycolor.frag
app/task/: CMakeLists.txt
app/task/proxy/: CMakeLists.txt  proxy.cpp  proxy.h
app/ui/: CMakeLists.txt  colorcoding.cpp
app/ui/style/: style.cpp
app/widget/audiomonitor/: audiomonitor.cpp
app/widget/clickablelabel/: clickablelabel.h
app/widget/collapsebutton/: collapsebutton.h
app/widget/colorlabelmenu/: colorlabelmenu.cpp
app/widget/colorwheel/: colorgradientwidget.cpp  colorpreviewbox.cpp  colorvalueswidget.cpp
app/widget/curvewidget/: curveview.cpp  curvewidget.cpp
app/widget/filefield/: filefield.cpp  filefield.h
app/widget/focusablelineedit/: focusablelineedit.h
app/widget/handmovableview/: handmovableview.cpp
app/widget/keyframeview/: keyframeview.cpp
app/widget/multicam/: multicamwidget.cpp
app/widget/nodecombobox/: nodecombobox.cpp
app/widget/nodeparamview/: nodeparamviewconnectedlabel.cpp  nodeparamviewcontext.cpp  nodeparamviewitem.cpp  nodeparamviewkeyframecontrol.cpp  nodeparamviewtextedit.cpp  nodeparamviewtextedit.h  nodeparamviewwidgetbridge.cpp
app/widget/nodeview/: nodeview.cpp  nodeviewcommon.h  nodeviewcontext.cpp  nodeviewedge.cpp  nodeviewitem.cpp  nodeviewtoolbar.cpp
app/widget/path/: pathwidget.cpp
app/widget/playbackcontrols/: dragbutton.h  playbackcontrols.cpp
app/widget/projectexplorer/: projectexplorer.cpp  projectexplorericonviewitemdelegate.cpp  projectexplorericonviewitemdelegate.h  projectexplorerlistviewbase.h  projectexplorerlistviewitemdelegate.h  projectexplorernavigation.cpp  projectexplorernavigation.h  projectexplorertreeview.h  projectviewmodel.cpp
app/widget/projecttoolbar/: projecttoolbar.h
engine/: CMakeLists.txt
engine/src/: appcallbacks.cpp  appcallbacks.h
shared/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/oakaudio/: CMakeLists.txt  audio_api.cpp  oakaudio_internal.h
src/oakcodec/: CMakeLists.txt  audio_params_helpers.h  codec_api.cpp  conformmanager.cpp  conformmanager.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  exportcodec.cpp  ffmpeg_utils.cpp  ffmpeg_utils.h  footagedescription.cpp  footagedescription.h  loopmode.h  oakcodec_internal.h  planarfiledevice.cpp  rendermode.h
src/oakcolor/: CMakeLists.txt  color_api.cpp  oakcolor_internal.h
src/oakgl/: CMakeLists.txt  oakgl_internal.h  openglrenderer.cpp  openglrenderer.h  renderer_api.cpp  shadercode.h
src/oakpluginhost/: CMakeLists.txt  oakpluginhost_internal.h  pluginhost_api.cpp
src/renderer/: CMakeLists.txt  main.cpp
tests/gtest/: AUDIO_SMOKE_TESTS.md  CMakeLists.txt  PLUGIN_SMOKE_TESTS.md  VIEWER_SMOKE_TESTS.md  audio_level_meter_test.cpp  audio_smoke_test.cpp  audio_synchronizer_test.cpp  audio_waveform_sync_test.cpp  c_api_audio_test.cpp  c_api_codec_test.cpp  c_api_color_test.cpp  c_api_edge_test.cpp  c_api_engine_test.cpp  c_api_integration_test.cpp  c_api_pluginhost_test.cpp  c_api_renderer_test.cpp  codec_decoder_test.cpp  color_lut_test.cpp  main.cpp  oakshared_test.cpp  opengl_readback_guard_test.cpp  plugin_format_conversion_test.cpp  plugin_ofx_integration_test.cpp  plugin_ofx_misc_test.cpp  plugin_smoke_test.cpp  project_serializer_test.cpp  proxy_manager_test.cpp  render_ipc_test.cpp  shader_resources_test.cpp  timecode_metadata_test.cpp  viewer_smoke_test.cpp
(+1000 files in other folders)
